// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveReport Loads report skeleton when mounted 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "case_count": Object {
          "failed": 0,
          "passed": 0,
        },
        "entries": Array [
          Object {
            "case_count": Object {
              "failed": 0,
              "passed": 0,
            },
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "case_count": Object {
                  "failed": 0,
                  "passed": 0,
                },
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "test_basic_assertions",
                    "name_type_index": Set {
                      "test_basic_assertions|testcase",
                      "SampleSuite|testplan",
                      "Assertions Test|testplan",
                      "Assertions Example|testplan",
                    },
                    "parent_uids": Array [
                      "Assertions Example",
                      "Assertions Test",
                      "SampleSuite",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "test_basic_assertions",
                  },
                ],
                "entry_uids": Array [
                  "test_basic_assertions",
                ],
                "fix_spec_path": null,
                "name": "SampleSuite",
                "name_type_index": Set {
                  "SampleSuite|testplan",
                  "Assertions Test|testplan",
                  "Assertions Example|testplan",
                  "test_basic_assertions|testcase",
                },
                "parent_uids": Array [
                  "Assertions Example",
                  "Assertions Test",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {},
                "uid": "SampleSuite",
              },
            ],
            "entry_uids": Array [
              "SampleSuite",
            ],
            "fix_spec_path": null,
            "name": "Assertions Test",
            "name_type_index": Set {
              "Assertions Test|testplan",
              "Assertions Example|testplan",
              "SampleSuite|testplan",
              "test_basic_assertions|testcase",
            },
            "parent_uids": Array [
              "Assertions Example",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {},
            "uid": "Assertions Test",
          },
        ],
        "entry_uids": Array [
          "Assertions Test",
        ],
        "meta": Object {},
        "name": "Assertions Example",
        "name_type_index": Set {
          "Assertions Example|testplan",
          "Assertions Test|testplan",
          "SampleSuite|testplan",
          "test_basic_assertions|testcase",
        },
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "uid": "Assertions Example",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "Assertions Example",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual test suites being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "test_basic_assertions",
                    "parent_uids": Array [
                      "Assertions Example",
                      "Assertions Test",
                      "SampleSuite",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "test_basic_assertions",
                  },
                ],
                "fix_spec_path": null,
                "name": "SampleSuite",
                "parent_uids": Array [
                  "Assertions Example",
                  "Assertions Test",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SampleSuite",
              },
            ],
            "fix_spec_path": null,
            "name": "Assertions Test",
            "parent_uids": Array [
              "Assertions Example",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "Assertions Test",
          },
        ],
        "meta": Object {},
        "name": "Assertions Example",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "Assertions Example",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "Assertions Example",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual testcases being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "description": null,
                    "entry_uids": Array [],
                    "logs": Array [],
                    "name": "test_basic_assertions",
                    "name_type_index": Set {
                      "test_basic_assertions|testcase",
                    },
                    "parent_uids": Array [
                      "Assertions Example",
                      "Assertions Test",
                      "SampleSuite",
                    ],
                    "status": "running",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "test_basic_assertions",
                  },
                ],
                "fix_spec_path": null,
                "name": "SampleSuite",
                "parent_uids": Array [
                  "Assertions Example",
                  "Assertions Test",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SampleSuite",
              },
            ],
            "fix_spec_path": null,
            "name": "Assertions Test",
            "parent_uids": Array [
              "Assertions Example",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "Assertions Test",
          },
        ],
        "meta": Object {},
        "name": "Assertions Example",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "Assertions Example",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "Assertions Example",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles navigation entries being clicked 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "test_basic_assertions",
                    "parent_uids": Array [
                      "Assertions Example",
                      "Assertions Test",
                      "SampleSuite",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "test_basic_assertions",
                  },
                ],
                "fix_spec_path": null,
                "name": "SampleSuite",
                "parent_uids": Array [
                  "Assertions Example",
                  "Assertions Test",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SampleSuite",
              },
            ],
            "fix_spec_path": null,
            "name": "Assertions Test",
            "parent_uids": Array [
              "Assertions Example",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "Assertions Test",
          },
        ],
        "meta": Object {},
        "name": "Assertions Example",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "Assertions Example",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "Assertions Example",
        },
        Object {
          "type": "multitest",
          "uid": "Assertions Test",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles tests being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "test_basic_assertions",
                    "parent_uids": Array [
                      "Assertions Example",
                      "Assertions Test",
                      "SampleSuite",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "test_basic_assertions",
                  },
                ],
                "fix_spec_path": null,
                "name": "SampleSuite",
                "parent_uids": Array [
                  "Assertions Example",
                  "Assertions Test",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SampleSuite",
              },
            ],
            "fix_spec_path": null,
            "name": "Assertions Test",
            "parent_uids": Array [
              "Assertions Example",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "Assertions Test",
          },
        ],
        "meta": Object {},
        "name": "Assertions Example",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "Assertions Example",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "Assertions Example",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;
